--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
   </head>
   <body>
@@ -11,57 +15,51 @@
     <hr />
     <div>
       <center>
-        <table style="background-color: rgb(130, 130, 193);width:fit-content;margin-top: 15%;">
+        <table>
           <tr>
-            <td colspan="3"><input size="10px" type="text" id="input" /></td>
+            <td colspan="3"><input size="10px" type="text" id="input" style="font-size:larger;font-family: Orbitron" /></td>
           </tr>
           <tr>
             <td>
-              <input type="button" value="/" id="div" onclick="button('/')" />
+              <input type="button" value="/" id="div" onclick="button('/')" style="font-size:larger;background-color: rgb(90, 90, 190);color:white"  />
             </td>
             <td>
-              <input type="button" value="-" id="sub" onclick="button('-')" />
+              <input type="button" value="-" id="sub" onclick="button('-')" style="font-size:larger;background-color: rgb(90, 90, 190);color:white"  />
             </td>
             <td>
-              <input type="button" value="*" id="mul" onclick="button('*')" />
+              <input type="button" value="*" id="mul" onclick="button('*')" style="font-size:larger;background-color: rgb(90, 90, 190);color:white" " />
             </td>
           </tr>
 
           <tr>
-            <td><input type="button" value="9" onclick="button('9')" /></td>
-            <td><input type="button" value="8" onclick="button('8')" /></td>
-            <td><input type="button" value="7" onclick="button('7')" /></td>
+            <td><input type="button" value="9" onclick="button('9')" style="font-size:larger" /></td>
+            <td><input type="button" value="8" onclick="button('8')" style="font-size:larger" /></td>
+            <td><input type="button" value="7" onclick="button('7')" style="font-size:larger" /></td>
           </tr>
 
           <tr>
-            <td><input type="button" value="6" onclick="button('6')" /></td>
-            <td><input type="button" value="5" onclick="button('5')" /></td>
-            <td><input type="button" value="4" onclick="button('4')" /></td>
+            <td><input type="button" value="6" onclick="button('6')" style="font-size:larger" /></td>
+            <td><input type="button" value="5" onclick="button('5')" style="font-size:larger" /></td>
+            <td><input type="button" value="4" onclick="button('4')" style="font-size:larger" /></td>
           </tr>
 
           <tr>
-            <td><input type="button" value="3" onclick="button('3')" /></td>
-            <td><input type="button" value="2" onclick="button('2')" /></td>
-            <td><input type="button" value="1" onclick="button('1')" /></td>
+            <td><input type="button" value="3" onclick="button('3')" style="font-size:larger" /></td>
+            <td><input type="button" value="2" onclick="button('2')" style="font-size:larger" /></td>
+            <td><input type="button" value="1" onclick="button('1')" style="font-size:larger" /></td>
           </tr>
 
           <tr>
-            <td><input type="button" value="0" onclick="button('0')" /></td>
+            <td><input type="button" value="0" onclick="button('0')" style="font-size:larger" /></td>
             <td>
-              <input type="button" value="+" id="add" onclick="button('+')" />
+              <input type="button" value="+" id="add" onclick="button('+')" style="font-size:larger;background-color: rgb(90, 90, 190);color:white"  />
             </td>
-            <td><input type="button" value="=" onclick="output()" /></td>
+            <td><input type="button" value="=" onclick="output()" style="font-size:larger;background-color: rgb(90, 90, 190);color:white" /></td>
           </tr>
 
           <tr>
             <td colspan="3">
-              <input
-                type="button"
-                value="CLEAR"
-                id="clr"
-                onclick="reset()"
-                style="width: 100px"
-              />
+              <input type="button" value="CLEAR" id="clr" onclick="reset()" style="font-size:larger"/>
             </td>
           </tr>
         </table>
