--- a/src/index.html
+++ b/src/index.html
@@ -4,66 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Calculator</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Simple Calculator</title>
   </head>
   <body>
-    <h2 style="text-align:center;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">BASIC CALCULATOR</h2>
-    <hr />
-    <div>
-      <center>
-        <table>
-          <tr>
-            <td colspan="3"><input size="10px" type="text" id="input" style="font-size:larger;font-family: Orbitron" /></td>
-          </tr>
-          <tr>
-            <td>
-              <input type="button" value="/" id="div" onclick="button('/')" style="font-size:larger;background-color: rgb(90, 90, 190);color:white"  />
-            </td>
-            <td>
-              <input type="button" value="-" id="sub" onclick="button('-')" style="font-size:larger;background-color: rgb(90, 90, 190);color:white"  />
-            </td>
-            <td>
-              <input type="button" value="*" id="mul" onclick="button('*')" style="font-size:larger;background-color: rgb(90, 90, 190);color:white" " />
-            </td>
-          </tr>
-
-          <tr>
-            <td><input type="button" value="9" onclick="button('9')" style="font-size:larger" /></td>
-            <td><input type="button" value="8" onclick="button('8')" style="font-size:larger" /></td>
-            <td><input type="button" value="7" onclick="button('7')" style="font-size:larger" /></td>
-          </tr>
-
-          <tr>
-            <td><input type="button" value="6" onclick="button('6')" style="font-size:larger" /></td>
-            <td><input type="button" value="5" onclick="button('5')" style="font-size:larger" /></td>
-            <td><input type="button" value="4" onclick="button('4')" style="font-size:larger" /></td>
-          </tr>
-
-          <tr>
-            <td><input type="button" value="3" onclick="button('3')" style="font-size:larger" /></td>
-            <td><input type="button" value="2" onclick="button('2')" style="font-size:larger" /></td>
-            <td><input type="button" value="1" onclick="button('1')" style="font-size:larger" /></td>
-          </tr>
-
-          <tr>
-            <td><input type="button" value="0" onclick="button('0')" style="font-size:larger" /></td>
-            <td>
-              <input type="button" value="+" id="add" onclick="button('+')" style="font-size:larger;background-color: rgb(90, 90, 190);color:white"  />
-            </td>
-            <td><input type="button" value="=" onclick="output()" style="font-size:larger;background-color: rgb(90, 90, 190);color:white" /></td>
-          </tr>
-
-          <tr>
-            <td colspan="3">
-              <input type="button" value="CLEAR" id="clr" onclick="reset()" style="font-size:larger"/>
-            </td>
-          </tr>
-        </table>
-      </center>
+    <div id="calculatorBody">
+      <div>
+        <input id="AC" type="button" onclick="clearAll()" value="AC" />
+        <span id="answer">0</span>
+      </div>
+      <div class="row"></div>
+      <div class="row">
+        <input type="button" onclick="numericButton('7')" value="7" />
+        <input type="button" onclick="numericButton('8')" value="8" />
+        <input type="button" onclick="numericButton('9')" value="9" />
+        <input type="button" onclick="operatorButton('+')" value="+" />
+      </div>
+      <div class="row">
+        <input type="button" onclick="numericButton('4')" value="4" />
+        <input type="button" onclick="numericButton('5')" value="5" />
+        <input type="button" onclick="numericButton('6')" value="6" />
+        <input type="button" onclick="operatorButton('-')" value="-" />
+      </div>
+      <div class="row">
+        <input type="button" onclick="numericButton('1')" value="1" />
+        <input type="button" onclick="numericButton('2')" value="2" />
+        <input type="button" onclick="numericButton('3')" value="3" />
+        <input type="button" onclick="operatorButton('*')" value="*" />
+      </div>
+      <div class="row">
+        <input type="button" onclick="numericButton('0')" value="0" />
+        <input type="button" onclick="numericButton('.')" value="." />
+        <input
+          id="equals"
+          type="button"
+          onclick="calculateQueue(queue)"
+          value="="
+        />
+        <input type="button" onclick="operatorButton('/')" value="/" />
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
